[package]
name = "generate"
version = "0.1.0"
edition = "2021"

[dependencies]
webidl2wit = { git = "https://github.com/wasi-gfx/webidl2wit", rev = "5693d1151834fceddf0e4fd4b9288675a930388e" }
weedle = "0.13.0"
wit-transforms = { git = "https://github.com/wasi-gfx/wit-transforms", rev = "8b790d7453a8da40c72d059bf30de749715c2668" }
wit-parser = "0.248"
wit-encoder = "0.248"
serde_json = "1.0.139"
semver = "1.0.26"
